2010-07-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15096: Missing icon for _recycler_ folders

2010-07-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #15082: [openDocs] Exception is thrown if a record isn't found

2010-07-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #1235: indexed search: garbage instead of cHash in the "path" link (thanks to Nikolas Hagestein)

2010-07-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14970: ts browser condition results in error if browser is unknown (Thanks to Caspar Stuebs) 
	* Fixed bug #15004: Cleanup cms autoload classes

2010-07-11  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14923: CleanUp: getIconImage is not replaced in Core (thanks to Steffen Ritter)
	* Follow-up to #15045: Trailing newlines after php closing tag. (Thanks to Nikolas Hagelstein)

2010-07-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14896: ExtJS is not included when RTE is invoked by USER_INT frontend script

2010-07-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #15061: Remove XCLASS from t3lib_utility_Http (Thanks to Georg Ringer)
	* Fixed bug #15055: Scheduler: Date picker is broken in add/edit form
	* Fixed bug #14988: TYPO3.Backend is assigned twice by ExtDirect and the viewport (Thanks to Stefan Galinski)
	* Fixed bug #15047 Remove trailing whitespaces in front of EOL (Thanks to Nikolas Hagelstein)
	* Fixed bug #15045: Trailing newlines after php closing tag. (Thanks to Nikolas Hagelstein)

2010-07-08  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to #14719: Wrong code comment (QUICKSTART/FIRST_INSTALL) (thanks to Steffen Gebert)
	* Fixed bug #14813: Install Tool uses deprecated function t3lib_stdGraphic->imagecreate() (thanks to Stefan Galinski)
	* Fixed bug #14971: Unit test for sanitizeLocalUrl fails on installations inside a subdirectory (thanks to Stefan Galinski & Pascal Jungblut)

2010-07-08  Dmitry Dulepov  <dmitry@typo3.org>
